--- a/package.json
+++ b/package.json
@@ -22,9 +22,6 @@
     "wl-msg-reader": "^0.2.0",
     "xmind-embed-viewer": "^1.2.0"
   },
-  "peerDependencies": {
-    "polaris-react-component": "*"
-  },
   "devDependencies": {
     "@storybook/react": "^8.0.5",
     "@testing-library/jest-dom": "^4.2.4",
@@ -46,7 +43,7 @@
     "webpack": "5.91.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "rm -rf dist && npm run build:esm && npm run build:cjs",
     "build:esm": "tsc --noEmit false",
     "build:cjs": "tsc --noEmit false --module commonjs --outDir ./dist/cjs",
